--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,8 @@ layout: default
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
+    {% include toc.html html=content %}
+    
     {{ content }}
   </div>
 
